spyro/src/main/java/spyro/compiler/parser/SpyroParser.java
// Generated from Spyro.g4 by ANTLR 4.13.1

package spyro.compiler.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SpyroParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, VARIABLES=3, SIGNATURES=4, LANGUAGE=5, EXAMPLES=6, ASSUMPTIONS=7, 
		OR=8, AND=9, EQ=10, NEQ=11, GT=12, LT=13, GTEQ=14, LTEQ=15, PLUS=16, MINUS=17, 
		MULT=18, DIV=19, MOD=20, NOT=21, SEMI=22, ASSIGN=23, LPAREN=24, RPAREN=25, 
		LBRACE=26, RBRACE=27, ARROW=28, HIDDENVAR=29, TRUE=30, FALSE=31, NULL=32, 
		HOLE=33, ID=34, INT=35, FLOAT=36, STRING=37, COMMENT=38, SPACE=39, OTHER=40;
	public static final int
		RULE_parse = 0, RULE_program = 1, RULE_declVariables = 2, RULE_declVar = 3, 
		RULE_declSignatures = 4, RULE_declSig = 5, RULE_declLanguage = 6, RULE_declLanguageRule = 7, 
		RULE_declExamples = 8, RULE_declExampleRule = 9, RULE_declAssumptions = 10, 
		RULE_declAssumption = 11, RULE_type = 12, RULE_expr = 13, RULE_atom = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "program", "declVariables", "declVar", "declSignatures", "declSig", 
			"declLanguage", "declLanguageRule", "declExamples", "declExampleRule", 
			"declAssumptions", "declAssumption", "type", "expr", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'|'", "','", "'variable'", "'signatures'", "'language'", "'examples'", 
			"'assumptions'", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'>='", 
			"'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "';'", "'='", "'('", 
			"')'", "'{'", "'}'", "'->'", "'hidden'", "'true'", "'false'", "'null'", 
			"'??'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "VARIABLES", "SIGNATURES", "LANGUAGE", "EXAMPLES", 
			"ASSUMPTIONS", "OR", "AND", "EQ", "NEQ", "GT", "LT", "GTEQ", "LTEQ", 
			"PLUS", "MINUS", "MULT", "DIV", "MOD", "NOT", "SEMI", "ASSIGN", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "ARROW", "HIDDENVAR", "TRUE", "FALSE", 
			"NULL", "HOLE", "ID", "INT", "FLOAT", "STRING", "COMMENT", "SPACE", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Spyro.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SpyroParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SpyroParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			program();
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DeclVariablesContext declVariables() {
			return getRuleContext(DeclVariablesContext.class,0);
		}
		public DeclSignaturesContext declSignatures() {
			return getRuleContext(DeclSignaturesContext.class,0);
		}
		public DeclLanguageContext declLanguage() {
			return getRuleContext(DeclLanguageContext.class,0);
		}
		public DeclExamplesContext declExamples() {
			return getRuleContext(DeclExamplesContext.class,0);
		}
		public DeclAssumptionsContext declAssumptions() {
			return getRuleContext(DeclAssumptionsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			declVariables();
			setState(34);
			declSignatures();
			setState(35);
			declLanguage();
			setState(36);
			declExamples();
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSUMPTIONS) {
				{
				setState(37);
				declAssumptions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclVariablesContext extends ParserRuleContext {
		public TerminalNode VARIABLES() { return getToken(SpyroParser.VARIABLES, 0); }
		public TerminalNode LBRACE() { return getToken(SpyroParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SpyroParser.RBRACE, 0); }
		public List<DeclVarContext> declVar() {
			return getRuleContexts(DeclVarContext.class);
		}
		public DeclVarContext declVar(int i) {
			return getRuleContext(DeclVarContext.class,i);
		}
		public DeclVariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declVariables; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclVariables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclVariablesContext declVariables() throws RecognitionException {
		DeclVariablesContext _localctx = new DeclVariablesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declVariables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(VARIABLES);
			setState(41);
			match(LBRACE);
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				declVar();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==HIDDENVAR || _la==ID );
			setState(47);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclVarContext extends ParserRuleContext {
		public DeclVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declVar; }
	 
		public DeclVarContext() { }
		public void copyFrom(DeclVarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclHiddenVarContext extends DeclVarContext {
		public TerminalNode HIDDENVAR() { return getToken(SpyroParser.HIDDENVAR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SpyroParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(SpyroParser.SEMI, 0); }
		public DeclHiddenVarContext(DeclVarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclHiddenVar(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclVisibleVarContext extends DeclVarContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SpyroParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(SpyroParser.SEMI, 0); }
		public DeclVisibleVarContext(DeclVarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclVisibleVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclVarContext declVar() throws RecognitionException {
		DeclVarContext _localctx = new DeclVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declVar);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new DeclVisibleVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				type();
				setState(50);
				match(ID);
				setState(51);
				match(SEMI);
				}
				break;
			case HIDDENVAR:
				_localctx = new DeclHiddenVarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				match(HIDDENVAR);
				setState(54);
				type();
				setState(55);
				match(ID);
				setState(56);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclSignaturesContext extends ParserRuleContext {
		public TerminalNode SIGNATURES() { return getToken(SpyroParser.SIGNATURES, 0); }
		public TerminalNode LBRACE() { return getToken(SpyroParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SpyroParser.RBRACE, 0); }
		public List<DeclSigContext> declSig() {
			return getRuleContexts(DeclSigContext.class);
		}
		public DeclSigContext declSig(int i) {
			return getRuleContext(DeclSigContext.class,i);
		}
		public DeclSignaturesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declSignatures; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclSignatures(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclSignaturesContext declSignatures() throws RecognitionException {
		DeclSignaturesContext _localctx = new DeclSignaturesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declSignatures);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(SIGNATURES);
			setState(61);
			match(LBRACE);
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				declSig();
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 67664740352L) != 0) );
			setState(67);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclSigContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(SpyroParser.SEMI, 0); }
		public DeclSigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declSig; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclSig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclSigContext declSig() throws RecognitionException {
		DeclSigContext _localctx = new DeclSigContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declSig);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			expr(0);
			setState(70);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclLanguageContext extends ParserRuleContext {
		public TerminalNode LANGUAGE() { return getToken(SpyroParser.LANGUAGE, 0); }
		public TerminalNode LBRACE() { return getToken(SpyroParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SpyroParser.RBRACE, 0); }
		public List<DeclLanguageRuleContext> declLanguageRule() {
			return getRuleContexts(DeclLanguageRuleContext.class);
		}
		public DeclLanguageRuleContext declLanguageRule(int i) {
			return getRuleContext(DeclLanguageRuleContext.class,i);
		}
		public DeclLanguageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declLanguage; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclLanguage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclLanguageContext declLanguage() throws RecognitionException {
		DeclLanguageContext _localctx = new DeclLanguageContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declLanguage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(LANGUAGE);
			setState(73);
			match(LBRACE);
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				declLanguageRule();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(79);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclLanguageRuleContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SpyroParser.ID, 0); }
		public TerminalNode ARROW() { return getToken(SpyroParser.ARROW, 0); }
		public TerminalNode SEMI() { return getToken(SpyroParser.SEMI, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public DeclLanguageRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declLanguageRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclLanguageRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclLanguageRuleContext declLanguageRule() throws RecognitionException {
		DeclLanguageRuleContext _localctx = new DeclLanguageRuleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declLanguageRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			type();
			setState(82);
			match(ID);
			setState(83);
			match(ARROW);
			{
			setState(84);
			expr(0);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(85);
				match(T__0);
				setState(86);
				expr(0);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(92);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclExamplesContext extends ParserRuleContext {
		public TerminalNode EXAMPLES() { return getToken(SpyroParser.EXAMPLES, 0); }
		public TerminalNode LBRACE() { return getToken(SpyroParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SpyroParser.RBRACE, 0); }
		public List<DeclExampleRuleContext> declExampleRule() {
			return getRuleContexts(DeclExampleRuleContext.class);
		}
		public DeclExampleRuleContext declExampleRule(int i) {
			return getRuleContext(DeclExampleRuleContext.class,i);
		}
		public DeclExamplesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declExamples; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclExamples(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclExamplesContext declExamples() throws RecognitionException {
		DeclExamplesContext _localctx = new DeclExamplesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declExamples);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(EXAMPLES);
			setState(95);
			match(LBRACE);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(96);
				declExampleRule();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclExampleRuleContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(SpyroParser.ARROW, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public DeclExampleRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declExampleRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclExampleRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclExampleRuleContext declExampleRule() throws RecognitionException {
		DeclExampleRuleContext _localctx = new DeclExampleRuleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declExampleRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			type();
			setState(105);
			match(ARROW);
			{
			setState(106);
			expr(0);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(107);
				match(T__0);
				setState(108);
				expr(0);
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclAssumptionsContext extends ParserRuleContext {
		public TerminalNode ASSUMPTIONS() { return getToken(SpyroParser.ASSUMPTIONS, 0); }
		public TerminalNode LBRACE() { return getToken(SpyroParser.LBRACE, 0); }
		public DeclAssumptionContext declAssumption() {
			return getRuleContext(DeclAssumptionContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(SpyroParser.RBRACE, 0); }
		public TerminalNode SEMI() { return getToken(SpyroParser.SEMI, 0); }
		public DeclAssumptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declAssumptions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclAssumptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclAssumptionsContext declAssumptions() throws RecognitionException {
		DeclAssumptionsContext _localctx = new DeclAssumptionsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declAssumptions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(ASSUMPTIONS);
			setState(115);
			match(LBRACE);
			setState(116);
			declAssumption();
			setState(117);
			match(RBRACE);
			setState(118);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclAssumptionContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(SpyroParser.SEMI, 0); }
		public DeclAssumptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declAssumption; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitDeclAssumption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclAssumptionContext declAssumption() throws RecognitionException {
		DeclAssumptionContext _localctx = new DeclAssumptionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_declAssumption);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			expr(0);
			setState(121);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SpyroParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpyroVisitor ) return ((SpyroVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
